--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tanstack/react-router-devtools": "^1.120.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.74.7",
